--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
+    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="./index.js"></script>
+    <div class="header">
+        <p>ROCK PAPER SCISSORS</h1>
+    </div>
+
+    <div class="buttons-container">
+        <div class="rock button" id="rock">
+            <img src="./images/rock.svg">
+            <p>Rock</p>
+        </div>
+        <div class="paper button" id="paper">
+            <img src="./images/paper.svg">
+            <p>Paper</p>
+        </div>
+        <div class="scissors button" id="scissors">
+            <img src="./images/scissors.svg">
+            <p>Scissorss</p>
+        </div>
+    </div>
+
+    <div class="score-board">
+        <p>SCORE: 4 - 5</p>
+    </div>
+
+    <div class="results"></div>
+
 </body>
 </html>
