Site is working on console

--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
     </div>
 
     <div class="buttons-container">
-        <div class="rock button" id="rock">
-            <img src="./images/rock.svg">
-            <p>Rock</p>
+        <div class="rock">
+            <button class="rock button">
+                <img src="./images/rock.svg" id="rock">
+                <p>Rock</p>
+            </button>
         </div>
-        <div class="paper button" id="paper">
-            <img src="./images/paper.svg">
-            <p>Paper</p>
+        <div class="paper">
+            <button class="paper button">
+                <img src="./images/paper.svg" id="paper">
+                <p>Paper</p>
+            </button>
         </div>
-        <div class="scissors button" id="scissors">
-            <img src="./images/scissors.svg">
-            <p>Scissorss</p>
+        <div class="scissors">
+            <button class="scissors button">
+                <img src="./images/scissors.svg" id="scissors">
+                <p>Scissorss</p>
+            </button>
         </div>
     </div>
 
