Site works but however winner status isnt displayed

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     </div>
 
     <div class="score-board">
-        <p>SCORE: 4 - 5</p>
+        <p>SCORE: </p>
+        <p id="score">Your Score - Computers Score</p>
     </div>
 
-    <div class="results"></div>
+    <div id="results"></div>
 
 </body>
 </html>
