Game works properly

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p id="score">Your Score - Computers Score</p>
     </div>
 
-    <div id="results"></div>
+    <div id="refresh" class="invisible">Please hit refresh!</div>
 
 </body>
 </html>
